<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="Search"/>


    <item
            android:id="@+id/item_map"
            android:icon="@drawable/ic_menu"
            android:title="@string/menu_showMap"
            app:showAsAction="never"/>

        <item
            android:id="@+id/item_logout"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_logout"
            android:visible="true"
            app:showAsAction="never" />


    <item
            android:id="@+id/item_add"
            android:icon="@drawable/ic_plus"
            android:title="@string/menu_addHillfort"
            app:showAsAction="never"/>



</menu>
