<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.wit.hillfort.views.hillfort.HillfortView"
    android:background="@drawable/gradient1"
    android:textColor="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-16dp">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/appBarLayout"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="34dp"
            android:layout_marginBottom="-34dp">


            <Button
                android:id="@+id/chooseImage"
                android:layout_width="201dp"
                android:layout_height="113dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="485dp"
                android:background="@color/colorCard"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/button_addImage"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:cornerRadius="25dp"
                />

            <EditText
                android:id="@+id/description"
                android:layout_width="378dp"
                android:layout_height="57dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="132dp"
                android:layout_marginEnd="25dp"
                android:hint="@string/hint_hillfortDescription"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimary"                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/hillfortTitle"
                android:layout_width="379dp"
                android:layout_height="53dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="72dp"
                android:layout_marginEnd="24dp"
                android:autofillHints=""

                android:hint="@string/hint_hillfortTitle"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimary"                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/lat"
                android:layout_width="95dp"
                android:layout_height="19dp"
                android:layout_marginTop="372dp"
                android:layout_marginEnd="44dp"
                android:text="00.000000"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lng"
                android:layout_width="92dp"
                android:layout_height="19dp"
                android:layout_marginTop="412dp"
                android:layout_marginEnd="48dp"
                android:text="00.000000"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/hillfortImage"
                android:layout_width="179dp"
                android:layout_height="113dp"
                android:layout_marginTop="484dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_photo" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="207dp"
                android:layout_height="120dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="328dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:cornerRadius="25dp"
                />

            <TextView
                android:id="@+id/textView"
                android:layout_width="90dp"
                android:layout_height="24dp"
                android:layout_marginTop="328dp"
                android:layout_marginEnd="52dp"
                android:text="Location"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RatingBar
                android:id="@+id/rating1"
                style="@android:style/Widget.Material.RatingBar"
                android:layout_width="243dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="230dp"
                android:numStars="5"
                android:rating="1"
                android:progressTint="#FFC107"
                android:progressBackgroundTint="@color/colorCard"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ToggleButton
                android:id="@+id/favourite1"
                android:layout_width="74dp"
                android:layout_height="69dp"
                android:layout_marginTop="224dp"
                android:layout_marginEnd="47dp"
                android:background="@drawable/button_favorite"
                android:checked="false"
                android:text=""
                android:textOff=""
                android:textOn=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <View
                android:id="@+id/divider"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="468dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider2"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="204dp"
                android:layout_marginEnd="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider3"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginTop="305dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="1dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/bottom_nav_menu"
            android:background="@color/colorAccent"
            app:itemTextColor="@color/colorPrimary"
            app:itemIconTint="@color/colorPrimary"/>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>